<resources>
    <string name="app_name">Perimeter And Area</string>
    <string name="square">square</string>
    <string name="triangle">triangle</string>
    <string name="history">history</string>
    <string name="chooseFormula">Choose Formula</string>
    <string name="calculate">Calculate!</string>
    <string name="result">Result</string>
    <string name="name">Name</string>
    <string name="height">Height</string>
    <string name="base">Base</string>
    <string name="triangleGreeting">Welcome to the triangle calculator. Please enter the necessary values,based on the chosen formula.</string>
    <string name="squareGreeting">Welcome to the triangle calculator. Please enter the necessary values,based on the chosen formula.</string>
    <string name="width">Width</string>
    <string name="length">Length</string>
    <string name="buttonSignIN">Sign In</string>

    <string-array name="triangle_formula_arrays">
        <item>Find area using base and height</item>
        <item>Find area using all sides</item>
        <item>Find area using trigonometry</item>
        <item>Find perimeter using all sides</item>
        <item>Find perimeter using Law of Cosines</item>
    </string-array>
    <string-array name="rectangle_formula_arrays">
        <item>Find area using length and width</item>
        <item>Find area using length and diagonal</item>
        <item>Find perimeter using width and height</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
